--- a/.github/workflows/convert-to-pdf.yml
+++ b/.github/workflows/convert-to-pdf.yml
@@ -26,5 +26,5 @@ jobs:
           build_html: false
       - uses: actions/upload-artifact@v1
         with:
-          name: docs
+          name: md_to_pdf
           path: ./
